--- a/Campus-courses/DKIT/index.html
+++ b/Campus-courses/DKIT/index.html
@@ -332,7 +332,7 @@
         </div>
       </div>
 
-      <a href="https://www.setu.ie/courses" target="_blank" class="btn-detail">View Detail</a>
+      <a href="https://www.dkit.ie/courses" target="_blank" class="btn-detail">View Detail</a>
     </div>
   `
     )
