--- a/Campus-courses/Independent-college/index.html
+++ b/Campus-courses/Independent-college/index.html
@@ -197,7 +197,7 @@
         cam: "169+",
         gpa: "2.0",
       },
-      url: "https://independentcollege.ie/courses/ba-honours-in-marketing/",
+      url: "https://independentcollege.ie/courses/",
     },
     {
       title: "BA (Hons) in Accounting and Finance",
@@ -211,7 +211,7 @@
         cam: "169+",
         gpa: "2.0",
       },
-      url: "https://independentcollege.ie/courses/ba-honours-accounting-finance/",
+      url: "https://independentcollege.ie/courses/",
     },
     {
       title: "BA (Honours) Business Studies",
@@ -225,7 +225,7 @@
         cam: "170",
         gpa: "2.0",
       },
-      url: "https://independentcollege.ie/courses/ba-honours-business-studies/",
+      url: "https://independentcollege.ie/courses/",
     },
     {
       title: "BA (Hons) in International Business",
@@ -239,7 +239,7 @@
         cam: "170",
         gpa: "2.0",
       },
-      url: "https://independentcollege.ie/courses/ba-honours-international-business/",
+      url: "https://independentcollege.ie/courses/",
     },
     {
       title: "MA in Dispute Resolution",
@@ -253,7 +253,7 @@
         cam: "184",
         gpa: "2.0",
       },
-      url: "https://independentcollege.ie/courses/ma-in-dispute-resolution/",
+      url: "https://independentcollege.ie/courses/",
     },
   ];
 
