Fix link case sensitivity for Contact page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="Campus-courses/SETU/">SETU</a></li>
         <li><a href="Campus-courses/TUdublin/">TU Dublin</a></li>
         <li><a href="Campus-courses/TUS/">TUS</a></li>
-        <li><a href="Campus-courses/contact/">Contact</a></li>
+        <li><a href="Campus-courses/Contact/">Contact</a></li>
     </ul>
 </body>
 </html>
