Flight booking addition

--- a/Campus-courses/Contact/index.html
+++ b/Campus-courses/Contact/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -166,7 +166,11 @@
           </p>
         </div>
 
-        <form action="https://formspree.io/f/xnjjqeew" method="POST">
+        <form
+          action="https://formspree.io/f/xnjjqeew"
+          method="POST"
+          enctype="multipart/form-data"
+        >
           <div class="form-grid">
             <div>
               <label class="field-label">Full Name</label>
@@ -177,7 +181,11 @@
               <input type="email" name="email" required />
             </div>
             <div>
-              <label class="field-label">Intake</label>
+              <label class="field-label">Phone</label>
+              <input type="tel" name="phone" required />
+            </div>
+            <div>
+              <label class="field-label">Preferred Intake</label>
               <select name="intake" required>
                 <option value="" disabled selected>Select</option>
                 <option>January / February</option>
@@ -185,11 +193,19 @@
               </select>
             </div>
             <div>
-              <label class="field-label">Year</label>
+              <label class="field-label">Preferred Year</label>
               <input type="number" name="year" placeholder="2026" required />
             </div>
+            <div>
+              <label class="field-label">Preferred Course</label>
+              <input
+                type="text"
+                name="course"
+                placeholder="Msc. Cloud Computing"
+              />
+            </div>
             <div class="full-width">
-              <label class="field-label">University</label>
+              <label class="field-label">Preferred University</label>
               <select name="university" required>
                 <option value="" disabled selected>Select university</option>
                 <option>Technological University Dublin</option>
