Add link to Flight in the index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="Campus-courses/TUS/">TUS</a></li>
         <li><a href="Campus-courses/MTU/">MTU</a></li>
         <li><a href="Campus-courses/Contact/">Contact</a></li>
+        <li><a href="Campus-courses/Flight/">FLIGHT</a></li>
     </ul>
 </body>
 </html>
