Update image source path in index.html

--- a/Campus-courses/Flight/index.html
+++ b/Campus-courses/Flight/index.html
@@ -231,7 +231,7 @@
           class="flex-1 bg-slate-800 flex justify-end items-center p-2border-l-4 border-[#76a61a]"
         >
           <img
-            src="/images/travelpic1.png"
+            src="/Campus-Course-Listing/images/travelpic1.png"
             alt="agent"
             class="h-60 object-cover hover:scale-105 transition:ease-in-out duration-300"
           />
