Update heading text for flight booking section

--- a/Campus-courses/Flight/index.html
+++ b/Campus-courses/Flight/index.html
@@ -42,7 +42,7 @@
   <body class="bg-gray-100 font-sans">
     <section class="hero-bg min-h-[700px] py-12 px-6 lg:px-24">
       <h2 class="text-center text-white text-4xl font-extrabold mb-2">
-        Secure Your Flight to Ireland
+        Book Your Flight to Ireland
       </h2>
       <p class="text-center text-white/90 mb-8 font-medium">
         Trusted Flight Reservations for Students and Travelers
