--- a/Campus-courses/Contact/index.html
+++ b/Campus-courses/Contact/index.html
@@ -11,7 +11,7 @@
     <style>
       :root {
         --brand-green: #7ba864;
-        --brand-green-dark: #6a9454;
+        --brand-green-dark: #8bc41f;
         --text-main: #1f2937;
         --text-muted: #6b7280;
         --border-color: #e5e7eb;
