Change brand color from green to orange

--- a/Campus-courses/Contact/index.html
+++ b/Campus-courses/Contact/index.html
@@ -10,7 +10,7 @@
     />
     <style>
       :root {
-        --brand-green: #7ba864;
+        --brand-orange: #d25822;
         --brand-green-dark: #8bc41f;
         --text-main: #1f2937;
         --text-muted: #6b7280;
