Add overflow hidden to main container styles

--- a/Campus-courses/Contact/index.html
+++ b/Campus-courses/Contact/index.html
@@ -32,6 +32,7 @@
         align-items: center;
         min-height: 110vh;
         padding: 20px;
+        overflow: hidden;
       }
 
       .main-container {
