Add Course Application link to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="Campus-courses/MTU/">MTU</a></li>
         <li><a href="Campus-courses/Contact/">Contact</a></li>
         <li><a href="Campus-courses/Flight/">FLIGHT</a></li>
+        <li><a href="Campus-courses/CourseApplication/">Course Application</a></li>
     </ul>
 </body>
 </html>
